--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["next/core-web-vitals", "plugin:prettier/recommended"],
+  "plugins": [
+    "eslint-plugin-react-compiler"
+  ],
+  "rules": {
+    "react-compiler/react-compiler": "error"
+  }
 }
